Fix extra padding

--- a/css/recipe.css
+++ b/css/recipe.css
@@ -14,11 +14,6 @@
     text-decoration-thickness: 2px;
 }
 
-.container
-{
-    padding-top: 2%;
-}
-
 .content
 {
     display: flex;
